# DMS-Frontend/src/app/api/models/case.ts
@@ -6,7 +6,7 @@ export interface Case {
   delivery_date?: string;
   id?: number;
   notes?: string;
-  patient?: string;
+  patientId?: number;
   urgent?: boolean;
-  user?: string;
+  userId?: string;
 }
