# DMS-Frontend/src/app/api/models/scan-with-relations.ts
@@ -1,5 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
+import { CaseWithRelations } from '../models/case-with-relations';
 import { PatientWithRelations } from '../models/patient-with-relations';
 import { UserWithRelations } from '../models/user-with-relations';
 
@@ -7,10 +8,12 @@ import { UserWithRelations } from '../models/user-with-relations';
  * (tsType: ScanWithRelations, schemaOptions: { includeRelations: true })
  */
 export interface ScanWithRelations {
+  case?: CaseWithRelations;
+  caseId?: number;
   foreignKey?: any;
   id?: number;
   patient?: PatientWithRelations;
-  patientId?: string;
+  patientId?: number;
   scanType: string;
   uploadDate: string;
   url: string;
